--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-right: 33px;
 }
 .container img {
     margin: 0;
