--- a/css/style.css
+++ b/css/style.css
@@ -1,107 +1,56 @@
-nav {
-    text-align: right;
-    margin-top: 33px;
-}
-ul li {
-    display: inline-block;
-    padding: 0px 30px;
-    text-align: right;
-    font-family:Georgia, 'Times New Roman', Times, serif
-}
-h1 {
-    padding-left: 200px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 30px;
-}
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 12%;
-}
-.intro {
-    text-align: center;
-    margin-left: 500px;
-    margin-right: 500px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 18px;
-    line-height: 1.5;
-}
-h2 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    padding-left: 300px;
-    padding-top: 60px;
-}
-h3 {
-    text-align: center;
-    padding-top: 30px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-h4 {
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 24px;
-    font-style: italic;
-    padding-top: 65px;
-}
-.image1{
-    height: 100px;
-    width: 700px;
-}
-.background {
-    text-align: left;
-    padding-left: 300px;
-    padding-right: 300px;
-    font-size: 18px;
-    line-height: 1.5;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-.row {
-    display: flex;
-    padding-top: 60px;
-}
-.column {
-    flex: 33.33%;
-    justify-content: right;
-}
-.image2 {
-    width: 30%;
-    padding-left: 200px;
-}
-.image3 {
-    width: 30%;
-    margin-left: auto;
-    margin-right: auto;
-}
-.image4 {
-    width: 30%;
-    margin-right: 290px;
-}
-a {
-    display: block;
-    text-align: center;
-}
-.center {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   padding-top: 25px;
-   cursor: pointer;
-}
-.image5 {
-    width: 3%;
-    padding-top: 15px;
-}
 .container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding-right: 33px;
+    justify-content: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.container img {
-    margin: 0;
+header {
+    display: flex;
 }
-.siteLogo {
-    height: 110px;
-    width: 110px;
+img {
+    max-width: 100%;
+}
+.image {
+    flex-basis: 14%;
+}
+.text {
+    font-size: 20px;
+}
+nav {
+    text-align: right;
+    width: 50%;
+    margin-top: 33px;
+}
+.inline-block { 
+    display:inline-block;
+    padding: 0px 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.inline-block a {
+    color: blue;
+}
+.aboutMe {
+    display: flex;
+    align-items: center;
+    border: 2px solid black;
+    height: 400px;
+    width: 900px;
+    margin: auto;
+    text-align: left;
+    padding: 12px;
+    margin-top: 100px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: lightgrey;
+  }
+  div h1 {
+      font-size: 35px;
+      padding: 15px;
+  }
+  h2 {
+      font-size: 20px;
+      padding-left: 15px;
+  }
+div p {
+    padding-left: 15px;
+    font-size: 20px;
 }
