--- a/css/mystory.css
+++ b/css/mystory.css
@@ -6,7 +6,7 @@ ul li {
     display: inline-block;
     padding: 0px 30px;
     text-align: right;
-    font-family:Georgia, 'Times New Roman', Times, serif
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 h1 {
     padding-left: 200px;
