--- a/css/mystory.css
+++ b/css/mystory.css
@@ -6,11 +6,12 @@ ul li {
     display: inline-block;
     padding: 0px 30px;
     text-align: right;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:'Cormorant Garamond', serif;
+    font-size: 22px;
 }
 h1 {
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Cormorant Garamond', serif;
     font-size: 30px;
 }
 img {
@@ -23,23 +24,23 @@ img {
     text-align: left;
     margin-left: 500px;
     margin-right: 500px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Cormorant Garamond', serif;
     font-size: 18px;
     line-height: 1.5;
 }
 h2 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Cormorant Garamond', serif;
     padding-left: 300px;
     padding-top: 60px;
 }
 h3 {
     text-align: center;
     padding-top: 30px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Cormorant Garamond', serif;
 }
 h4 {
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Cormorant Garamond', serif;
     font-size: 24px;
     font-style: italic;
     padding-top: 65px;
@@ -54,7 +55,7 @@ h4 {
     padding-right: 300px;
     font-size: 18px;
     line-height: 1.5;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Cormorant Garamond', serif;
 }
 .row {
     display: flex;
@@ -114,8 +115,5 @@ a:visited {
     color: black;}
 a:hover {
     font-size: 130%;
-    background: -webkit-linear-gradient(#99fadc, #3c1361);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #000000;
 }
